--- a/index.html
+++ b/index.html
@@ -1,20 +1,28 @@
-<!DOCTYPE  html>
-<html  lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-   <meta  charset="UTF-8"  />
-   <meta  name="viewport"  content="width=device-width, initial-scale=1.0"  />
-   <title>Task Manager</title>
-   <link  rel="stylesheet"  href="styles.css"  />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Task Manager</title>
+
+  <!-- Link to external CSS for styling -->
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-   <div  class="container">
-   	<h1>Task Manager</h1>
-   	<div  class="input-container">
-   		<input  type="text"  id="taskInput"  placeholder="Enter a task..."  />
-   		<button  onclick="addTask()">Add</button>
-   	</div>
-   	<ul  id="taskList"></ul>
-   </div>
-   <script  src="script.js"></script>
+  <div class="container">
+    <h1>Task Manager</h1>
+
+    <!-- Input field and button to add new tasks -->
+    <div class="input-container">
+      <input type="text" id="taskInput" placeholder="Enter a task..." />
+      <button onclick="addTask()">Add</button>
+    </div>
+
+    <!-- Unordered list to display tasks -->
+    <ul id="taskList"></ul>
+  </div>
+
+  <!-- Link to JavaScript logic -->
+  <script src="script.js"></script>
 </body>
 </html>
